crates/rattler_solve/tests/snapshots/backends__resolvo__solve_dummy_repo_optional_depends_foo_multi_resolvo.snap
---
source: crates/rattler_solve/tests/backends.rs
expression: result
---
Ok(
    [
        RepoDataRecord {
            package_record: PackageRecord {
                arch: None,
                build: "py36h1af98f8_1",
                build_number: 1,
                constrains: [],
                depends: [],
                features: None,
                legacy_bz2_md5: None,
                legacy_bz2_size: None,
                license: Some(
                    "MIT",
                ),
                license_family: Some(
                    "MIT",
                ),
                md5: Some(
                    [
                        251,
                        115,
                        29,
                        146,
                        144,
                        240,
                        188,
                        191,
                        58,
                        5,
                        70,
                        101,
                        243,
                        62,
                        201,
                        79,
                    ],
                ),
                name: PackageName {
                    normalized: None,
                    source: "foo",
                },
                noarch: NoArchType(
                    None,
                ),
                optional_depends: {
                    "with-bar": [
                        "bar >=1.2.3",
                    ],
                    "with-baz2": [
                        "baz >=2.0",
                    ],
                },
                platform: None,
                purls: None,
                python_site_packages_path: None,
                run_exports: None,
                sha256: Some(
                    [
                        103,
                        166,
                        59,
                        236,
                        63,
                        211,
                        32,
                        81,
                        112,
                        234,
                        173,
                        83,
                        45,
                        72,
                        117,
                        149,
                        184,
                        170,
                        206,
                        185,
                        129,
                        77,
                        19,
                        198,
                        133,
                        141,
                        123,
                        172,
                        62,
                        242,
                        76,
                        212,
                    ],
                ),
                size: Some(
                    414494,
                ),
                subdir: "noarch",
                timestamp: Some(
                    2024-05-13T14:36:14Z,
                ),
                track_features: [],
                version: VersionWithSource {
                    version: Version {
                        version: [[0], [3], [0], [2]],
                        local: [],
                    },
                    source: Some(
                        "3.0.2",
                    ),
                },
            },
            file_name: "foo-3.0.2-py36h1af98f8_1.conda",
            url: Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "conda.anaconda.org",
                    ),
                ),
                port: None,
                path: "/conda-forge/linux-64/foo-3.0.2-py36h1af98f8_1.conda",
                query: None,
                fragment: None,
            },
            channel: Some(
                "https://conda.anaconda.org/conda-forge/",
            ),
            selected_feature: Some(
                "with-bar",
            ),
        },
        RepoDataRecord {
            package_record: PackageRecord {
                arch: None,
                build: "py36h1af98f8_1",
                build_number: 1,
                constrains: [],
                depends: [],
                features: None,
                legacy_bz2_md5: None,
                legacy_bz2_size: None,
                license: Some(
                    "MIT",
                ),
                license_family: Some(
                    "MIT",
                ),
                md5: Some(
                    [
                        251,
                        115,
                        29,
                        146,
                        144,
                        240,
                        188,
                        191,
                        58,
                        5,
                        70,
                        101,
                        243,
                        62,
                        201,
                        79,
                    ],
                ),
                name: PackageName {
                    normalized: None,
                    source: "foo",
                },
                noarch: NoArchType(
                    None,
                ),
                optional_depends: {
                    "with-bar": [
                        "bar >=1.2.3",
                    ],
                    "with-baz2": [
                        "baz >=2.0",
                    ],
                },
                platform: None,
                purls: None,
                python_site_packages_path: None,
                run_exports: None,
                sha256: Some(
                    [
                        103,
                        166,
                        59,
                        236,
                        63,
                        211,
                        32,
                        81,
                        112,
                        234,
                        173,
                        83,
                        45,
                        72,
                        117,
                        149,
                        184,
                        170,
                        206,
                        185,
                        129,
                        77,
                        19,
                        198,
                        133,
                        141,
                        123,
                        172,
                        62,
                        242,
                        76,
                        212,
                    ],
                ),
                size: Some(
                    414494,
                ),
                subdir: "noarch",
                timestamp: Some(
                    2024-05-13T14:36:14Z,
                ),
                track_features: [],
                version: VersionWithSource {
                    version: Version {
                        version: [[0], [3], [0], [2]],
                        local: [],
                    },
                    source: Some(
                        "3.0.2",
                    ),
                },
            },
            file_name: "foo-3.0.2-py36h1af98f8_1.conda",
            url: Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "conda.anaconda.org",
                    ),
                ),
                port: None,
                path: "/conda-forge/linux-64/foo-3.0.2-py36h1af98f8_1.conda",
                query: None,
                fragment: None,
            },
            channel: Some(
                "https://conda.anaconda.org/conda-forge/",
            ),
            selected_feature: Some(
                "with-baz2",
            ),
        },
        RepoDataRecord {
            package_record: PackageRecord {
                arch: None,
                build: "py36h1af98f8_1",
                build_number: 1,
                constrains: [],
                depends: [],
                features: None,
                legacy_bz2_md5: None,
                legacy_bz2_size: None,
                license: Some(
                    "MIT",
                ),
                license_family: Some(
                    "MIT",
                ),
                md5: Some(
                    [
                        251,
                        115,
                        29,
                        146,
                        144,
                        240,
                        188,
                        191,
                        58,
                        5,
                        70,
                        101,
                        243,
                        62,
                        201,
                        79,
                    ],
                ),
                name: PackageName {
                    normalized: None,
                    source: "foo",
                },
                noarch: NoArchType(
                    None,
                ),
                optional_depends: {
                    "with-bar": [
                        "bar >=1.2.3",
                    ],
                    "with-baz2": [
                        "baz >=2.0",
                    ],
                },
                platform: None,
                purls: None,
                python_site_packages_path: None,
                run_exports: None,
                sha256: Some(
                    [
                        103,
                        166,
                        59,
                        236,
                        63,
                        211,
                        32,
                        81,
                        112,
                        234,
                        173,
                        83,
                        45,
                        72,
                        117,
                        149,
                        184,
                        170,
                        206,
                        185,
                        129,
                        77,
                        19,
                        198,
                        133,
                        141,
                        123,
                        172,
                        62,
                        242,
                        76,
                        212,
                    ],
                ),
                size: Some(
                    414494,
                ),
                subdir: "noarch",
                timestamp: Some(
                    2024-05-13T14:36:14Z,
                ),
                track_features: [],
                version: VersionWithSource {
                    version: Version {
                        version: [[0], [3], [0], [2]],
                        local: [],
                    },
                    source: Some(
                        "3.0.2",
                    ),
                },
            },
            file_name: "foo-3.0.2-py36h1af98f8_1.conda",
            url: Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "conda.anaconda.org",
                    ),
                ),
                port: None,
                path: "/conda-forge/linux-64/foo-3.0.2-py36h1af98f8_1.conda",
                query: None,
                fragment: None,
            },
            channel: Some(
                "https://conda.anaconda.org/conda-forge/",
            ),
            selected_feature: None,
        },
        RepoDataRecord {
            package_record: PackageRecord {
                arch: None,
                build: "unix_py36h1af98f8_2",
                build_number: 1,
                constrains: [],
                depends: [],
                features: None,
                legacy_bz2_md5: None,
                legacy_bz2_size: None,
                license: Some(
                    "MIT",
                ),
                license_family: Some(
                    "MIT",
                ),
                md5: Some(
                    [
                        188,
                        19,
                        170,
                        88,
                        226,
                        9,
                        43,
                        203,
                        11,
                        151,
                        197,
                        97,
                        55,
                        61,
                        57,
                        5,
                    ],
                ),
                name: PackageName {
                    normalized: None,
                    source: "bar",
                },
                noarch: NoArchType(
                    None,
                ),
                optional_depends: {
                    "with-xfoo": [
                        "xfoo >=1",
                    ],
                },
                platform: None,
                purls: None,
                python_site_packages_path: None,
                run_exports: None,
                sha256: Some(
                    [
                        151,
                        236,
                        55,
                        125,
                        42,
                        216,
                        61,
                        254,
                        241,
                        25,
                        75,
                        122,
                        163,
                        27,
                        12,
                        144,
                        118,
                        25,
                        78,
                        16,
                        217,
                        149,
                        166,
                        230,
                        150,
                        201,
                        208,
                        125,
                        215,
                        130,
                        177,
                        74,
                    ],
                ),
                size: Some(
                    414494,
                ),
                subdir: "noarch",
                timestamp: Some(
                    2020-11-11T16:04:49.658Z,
                ),
                track_features: [],
                version: VersionWithSource {
                    version: Version {
                        version: [[0], [1], [2], [3]],
                        local: [],
                    },
                    source: Some(
                        "1.2.3",
                    ),
                },
            },
            file_name: "bar-1.0-unix_py36h1af98f8_2.tar.bz2",
            url: Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "conda.anaconda.org",
                    ),
                ),
                port: None,
                path: "/conda-forge/linux-64/bar-1.0-unix_py36h1af98f8_2.tar.bz2",
                query: None,
                fragment: None,
            },
            channel: Some(
                "https://conda.anaconda.org/conda-forge/",
            ),
            selected_feature: None,
        },
        RepoDataRecord {
            package_record: PackageRecord {
                arch: None,
                build: "unix_py36h1af98f8_2",
                build_number: 1,
                constrains: [],
                depends: [],
                features: None,
                legacy_bz2_md5: None,
                legacy_bz2_size: None,
                license: Some(
                    "MIT",
                ),
                license_family: Some(
                    "MIT",
                ),
                md5: Some(
                    [
                        188,
                        19,
                        170,
                        88,
                        226,
                        9,
                        43,
                        203,
                        11,
                        151,
                        197,
                        97,
                        55,
                        61,
                        57,
                        5,
                    ],
                ),
                name: PackageName {
                    normalized: None,
                    source: "baz",
                },
                noarch: NoArchType(
                    None,
                ),
                optional_depends: {
                    "with-bors": [
                        "bors >=2.0",
                    ],
                },
                platform: None,
                purls: None,
                python_site_packages_path: None,
                run_exports: None,
                sha256: Some(
                    [
                        151,
                        236,
                        55,
                        125,
                        42,
                        216,
                        61,
                        254,
                        241,
                        25,
                        75,
                        122,
                        163,
                        27,
                        12,
                        144,
                        118,
                        25,
                        78,
                        16,
                        217,
                        149,
                        166,
                        230,
                        150,
                        201,
                        208,
                        125,
                        215,
                        130,
                        177,
                        74,
                    ],
                ),
                size: Some(
                    414494,
                ),
                subdir: "noarch",
                timestamp: Some(
                    2024-05-13T14:36:14Z,
                ),
                track_features: [],
                version: VersionWithSource {
                    version: Version {
                        version: [[0], [2], [0]],
                        local: [],
                    },
                    source: Some(
                        "2.0",
                    ),
                },
            },
            file_name: "baz-2.0-unix_py36h1af98f8_2.tar.bz2",
            url: Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "conda.anaconda.org",
                    ),
                ),
                port: None,
                path: "/conda-forge/linux-64/baz-2.0-unix_py36h1af98f8_2.tar.bz2",
                query: None,
                fragment: None,
            },
            channel: Some(
                "https://conda.anaconda.org/conda-forge/",
            ),
            selected_feature: None,
        },
    ],
)
