crates/rattler_solve/tests/snapshots/backends__resolvo__solve_quetz.snap
---
source: crates/rattler_solve/tests/backends.rs
assertion_line: 530
expression: "solve_real_world::<rattler_solve::resolvo::Solver>(vec![\"quetz\",])"
---
- _libgcc_mutex 0.1 conda_forge
- _openmp_mutex 4.5 2_gnu
- aiofiles 0.8.0 pyhd8ed1ab_0
- alembic 1.7.6 pyhd8ed1ab_0
- anyio 3.6.1 py38h578d9bd_0
- anyjson 0.3.3 pyhd8ed1ab_1004
- appdirs 1.4.4 pyh9f0ad1d_0
- argon2-cffi 21.3.0 pyhd8ed1ab_0
- argon2-cffi-bindings 21.2.0 py38h0a891b7_2
- arrow 1.2.2 pyhd8ed1ab_0
- authlib 0.15.5 pyhd8ed1ab_0
- babel 2.9.1 pyh44b312d_0
- bcrypt 3.2.2 py38h0a891b7_0
- brotlipy 0.7.0 py38h0a891b7_1004
- bzip2 1.0.8 h7f98852_4
- ca-certificates 2022.6.15 ha878542_0
- certifi 2022.6.15 py38h578d9bd_0
- cffi 1.15.1 py38h4a40e3a_0
- charset-normalizer 2.0.11 pyhd8ed1ab_0
- click 8.1.3 py38h578d9bd_0
- colorama 0.4.4 pyh9f0ad1d_0
- colour 0.1.5 py_0
- cryptography 37.0.4 py38h2b5fc30_0
- fastapi 0.73.0 pyhd8ed1ab_0
- flit-core 3.6.0 pyhd8ed1ab_0
- fsspec 2022.1.0 pyhd8ed1ab_0
- furl 2.1.3 pyhd8ed1ab_0
- h11 0.12.0 pyhd8ed1ab_0
- h2 3.2.0 py38h32f6830_1
- hpack 3.0.0 py_0
- hyperframe 5.2.0 py_0
- idna 3.3 pyhd8ed1ab_0
- importlib-metadata 4.11.4 py38h578d9bd_0
- importlib_resources 5.4.0 pyhd8ed1ab_0
- infinity 1.5 pyhd8ed1ab_0
- intervals 0.9.2 pyhd8ed1ab_0
- itsdangerous 2.0.1 pyhd8ed1ab_0
- jinja2 3.0.3 pyhd8ed1ab_0
- ld_impl_linux-64 2.36.1 hea4e1c9_2
- libffi 3.4.2 h7f98852_5
- libgcc-ng 12.1.0 h8d9b700_16
- libgomp 12.1.0 h8d9b700_16
- libnsl 2.0.0 h7f98852_0
- libsqlite 3.39.2 h753d276_1
- libstdcxx-ng 12.1.0 ha89aaad_16
- libuuid 2.32.1 h7f98852_1000
- libzlib 1.2.12 h166bdaf_2
- mako 1.1.6 pyhd8ed1ab_0
- markupsafe 2.1.1 py38h0a891b7_1
- ncurses 6.3 h27087fc_1
- openssl 1.1.1q h166bdaf_0
- orderedmultidict 1.0.1 py_0
- pamela 1.0.0 py_0
- passlib 1.7.4 pyh9f0ad1d_0
- pendulum 2.1.2 py38h0a891b7_4
- phonenumbers 8.12.43 pyhd8ed1ab_0
- pip 22.0.3 pyhd8ed1ab_0
- pluggy 1.0.0 py38h578d9bd_3
- prometheus_client 0.13.1 pyhd8ed1ab_0
- pycparser 2.21 pyhd8ed1ab_0
- pydantic 1.9.2 py38h0a891b7_0
- pyopenssl 22.0.0 pyhd8ed1ab_0
- pysocks 1.7.1 py38h578d9bd_5
- python 3.8.13 h582c2e5_0_cpython
- python-dateutil 2.8.2 pyhd8ed1ab_0
- python-multipart 0.0.5 py_0
- python_abi 3.8 2_cp38
- pytz 2021.3 pyhd8ed1ab_0
- pytzdata 2020.1 pyh9f0ad1d_0
- pyyaml 6.0 py38h0a891b7_4
- quetz 0.3.0 pyhaa4b35c_0
- readline 8.1.2 h0f457ee_0
- requests 2.27.1 pyhd8ed1ab_0
- setuptools 65.0.2 py38h578d9bd_0
- shellingham 1.4.0 pyh44b312d_0
- six 1.16.0 pyh6c4a22f_0
- sniffio 1.2.0 py38h578d9bd_3
- sqlalchemy 1.3.24 py38h0a891b7_1
- sqlalchemy-utils 0.38.2 pyhd8ed1ab_0
- sqlite 3.39.2 h4ff8645_1
- starlette 0.17.1 pyhd8ed1ab_0
- tenacity 8.0.1 pyhd8ed1ab_0
- tk 8.6.12 h27826a3_0
- toml 0.10.2 pyhd8ed1ab_0
- typer 0.4.0 pyhd8ed1ab_0
- typing-extensions 4.0.1 hd8ed1ab_0
- typing_extensions 4.0.1 pyha770c72_0
- ujson 5.3.0 py38hfa26641_0
- urllib3 1.26.8 pyhd8ed1ab_1
- uvicorn 0.18.2 py38h578d9bd_2
- wheel 0.37.1 pyhd8ed1ab_0
- xattr 0.9.9 py38h0a891b7_1
- xz 5.2.6 h166bdaf_0
- yaml 0.2.5 h7f98852_2
- zipp 3.7.0 pyhd8ed1ab_1
- zstandard 0.18.0 py38h0a891b7_0

