crates/rattler_solve/tests/snapshots/backends__resolvo__virtual_package_constrains.snap
---
source: crates/rattler_solve/tests/backends.rs
expression: output
---
Cannot solve the request because of: The following packages are incompatible
├─ __cuda * can be installed with any of the following options:
│  └─ __cuda 1
└─ cuda-version * cannot be installed because there are no viable options:
   └─ cuda-version 12.5 would constrain
      └─ __cuda >=12.1, which conflicts with any installable versions previously reported
